alteração na opacity e no titulo do projeto

--- a/styles.css
+++ b/styles.css
@@ -63,11 +63,11 @@ button {
 }
 
 button:hover {
-    opacity: 0.8;
+    opacity: .8;
 }
 
 button:active {
-    opacity: 0.5;
+    opacity: .5;
 }
 
 a {
